test/data/syntax-errors/bad-statement.gs
Str a = "a"
givesUs a
